# GameEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
include/ge/base/: assert.h  camera.h  color.h  math.h  matrix.h  mesh.h  png.h  point.h  texture.h  transformation.h  window.h
lib/: CMakeLists.txt
lib/lodepng/: CMakeLists.txt
meshes/: cube.txt
src/: main.cpp
src/base/: assert.h  camera.h  color.h  math.h  matrix.h  mesh.h  png.cpp  png.h  point.cpp  point.h  texture.h  time.h  transformation.h  window.cpp  window.h
src/lodepng/: png.h
